# forge

./: .gitignore  ARCHITECTURE.md  PHASES.md  PLAN.md  README.md  RESEARCH_NOTES.md  ROADMAP-ADAPTER-INTEGRATION.md  SPOKE_ONBOARDING.md  SPRINT-PLAN-FACTS.md  SPRINT-PLAN-PATH2-CORE-MODELS.md  SPRINT-PLAN-PATH3-WMS-ADAPTER.md  SPRINT-PLAN-PATH4-MES-ADAPTER.md  SPRINT-PLAN-PATH5-GRPC-TRANSPORT.md  SPRINT-PLAN-PATH6-CURATION-SERVICE.md  p7-ot-module-phases1-6.bundle  pyproject.toml
.serena/: project.yml
benchmarks/: bench_transport.py
deploy/docker/: .dockerignore  Dockerfile.forge  docker-compose.yml  init-entrypoint.sh
docs/: MODULE_BUILDER.md
docs/FxTS/: FACTS.md  FATS.md  FDTS.md  FHTS.md  FLTS.md  FNTS.md  FOTS.md  FPTS.md  FQTS.md  FSTS.md  README.md
docs/core/: manufacturing-entity-catalog.md
docs/development/: workos_overview.md
docs/governance/: facts-developer-guide.md
docs/p7-ot-module/: COMPETITIVE_ANALYSIS.md  HMI_LATENCY_CONTRACT.md  P7_ARCHITECTURAL_SUMMARY.docx  P7_ARCHITECTURAL_SUMMARY.js  P7_RESEARCH_SUMMARY.md  P7_SPRINT_PLAN.md  SYSTEM_TO_FORGE_API_MAP.md  TIER1_CONVERSION_TARGETS.md
docs/spoke-onboarding/: bosc-ims-compliance-plan.md  whk-wms-android-compliance-plan.md
go/: .gitignore  Makefile  buf.gen.yaml  go.mod  go.sum
go/proto/: buf.yaml
patches/: 0001-feat-ot-module-P7-Phases-1-6-OPC-UA-adapter-alarm-en.patch  0002-docs-comprehensive-README-with-full-architecture-mod.patch
reports/d3-12-verification/: conftest.py  report.json  test_facts_governance.py  test_hub_api.py  verify_d3.py
sdk/: __init__.py
sdk/module_builder/: __init__.py  cli.py  manifest_builder.py  scaffolder.py
specs/: adapter-transport.facts.json  curation.facts.json  grpc-hardened-transport.ftts.json  whk-data-products.fqts.json
(+596 files in other folders)
